# streamguard-threat-detection

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
apps/api/: __init__.py  dependencies.py  main.py
apps/api/routes/: __init__.py  alerts.py  detections.py  health.py  metrics.py
apps/detector/: __init__.py  main.py
apps/producer/: __init__.py  main.py
data/sample/: events.jsonl  example_event.json
scripts/: __init__.py  create_topics.py  smoke_test.py
src/streamguard/: __init__.py  config.py
src/streamguard/domain/: __init__.py  dead_letters.py  detections.py  events.py
src/streamguard/features/: __init__.py  feature_contract.py  preprocessing.py
src/streamguard/infrastructure/: __init__.py  memory.py  redis_metrics.py  redis_state.py
src/streamguard/infrastructure/kafka/: __init__.py  admin.py  consumer.py  producer.py  serialization.py
src/streamguard/infrastructure/memory/: __init__.py  alerts.py  metrics.py  (+1 more)
src/streamguard/models/: __init__.py  baseline.py
src/streamguard/services/: __init__.py  detection_service.py  repositories.py  stream_processor.py
tests/: test_alert_repository.py  test_api_endpoints.py  test_baseline_scoring.py  test_config.py  test_detection_service.py  test_detector_worker.py  test_domain_schemas.py  test_feature_extraction.py  test_kafka_admin.py  test_kafka_serialization.py  test_metrics_repository.py  test_postgres_detection_repository.py  test_processed_event_repository.py  test_producer_app.py  test_redis_alert_repository.py  test_smoke_script.py  test_stream_processor.py
(+5 files in other folders)
