[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamguard-threat-detection"
version = "0.1.0"
description = "Local-first AI threat detection pipeline MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "confluent-kafka>=2.5,<3.0",
  "fastapi>=0.115,<1.0",
  "pydantic>=2.8,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "redis>=5.0,<7.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
